# attack-gseg

./: .gitignore  CONTRIBUTING.md  README.md  demo.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  fix-indent.yml  format-fix.yml
app/: gradio_app.py
src/gseg/: __init__.py  api.py  build_graph.py  ingest_attack.py  rank.py  retrieve.py
tests/: test_api.py  test_graph.py  test_ingest.py  test_rank.py  test_retrieve.py
